--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,85 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #ffffff;
+  color: #777777;
+  line-height: 1.6;
+  font-size: 1rem;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+p {
+  font-family: Lato, Helvetica, sans-serif;
+  text-align: left;
+}
+
+h1 {
+  font-size: 1.563em;
+  clear: both;
+  font-family: Lora, Garamond, serif;
+  font-weight: normal;
+  line-height: 1.2;
+  font-style: italic;
+  margin-bottom: 0.5em;
+}
+
+hr {
+  height: 6px;
+  border: 0;
+  box-shadow: inset 0 6px 6px -6px rgba(0, 0, 0, 0.5);
+  width: 20%
+}
+
+/* SMARTPHONES PORTRAIT */
+
+@media only screen and (min-width: 300px) {
+  body {
+    padding: 2.07em;
+  }
+
+  img {
+    width: 77vw;
+  }
+}
+
+/* SMARTPHONES LANDSCAPE */
+
+@media only screen and (min-width: 480px) {
+  body {
+    /* background-color: #032b05; */
+  }
+}
+
+/* TABLETS PORTRAIT */
+
+@media only screen and (min-width: 768px) {
+  body {
+    /* background-color: #c22a71; */
+  }
+}
+
+/* TABLET LANDSCAPE / DESKTOP */
+
+@media only screen and (min-width: 1024px) {
+  body {
+    padding-left: 26vw;
+    padding-right: 26vw;
+    background-color: #eeeeee;
+  }
+
+  #container {
+    background-color: #ffffff;
+    width: 48vw;
+  }
+
+  #container > p {
+    padding-left: 5.5em;
+    padding-right: 5.5em;
+  }
+
+  img {
+    width: 37vw;
+  }
 }
